// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordRulesChecklist — snapshots > matches the all-failing tree (single lowercase char) 1`] = `
<View
  className="gap-xs"
>
  <View
    accessibilityLabel="setup.rules.minLength: common:notMet"
    accessibilityState={
      {
        "checked": false,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-minLength"
  >
    <View
      testID="icon-close"
    />
    <Text
      className="text-xs text-error"
      variant="caption"
    >
      setup.rules.minLength
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.uppercase: common:notMet"
    accessibilityState={
      {
        "checked": false,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-uppercase"
  >
    <View
      testID="icon-close"
    />
    <Text
      className="text-xs text-error"
      variant="caption"
    >
      setup.rules.uppercase
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.lowercase: common:met"
    accessibilityState={
      {
        "checked": true,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-lowercase"
  >
    <View
      testID="icon-check"
    />
    <Text
      className="text-xs text-success"
      variant="caption"
    >
      setup.rules.lowercase
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.number: common:notMet"
    accessibilityState={
      {
        "checked": false,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-number"
  >
    <View
      testID="icon-close"
    />
    <Text
      className="text-xs text-error"
      variant="caption"
    >
      setup.rules.number
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.special: common:notMet"
    accessibilityState={
      {
        "checked": false,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-special"
  >
    <View
      testID="icon-close"
    />
    <Text
      className="text-xs text-error"
      variant="caption"
    >
      setup.rules.special
    </Text>
  </View>
</View>
`;

exports[`PasswordRulesChecklist — snapshots > matches the all-passing tree (valid complex password) 1`] = `
<View
  className="gap-xs"
>
  <View
    accessibilityLabel="setup.rules.minLength: common:met"
    accessibilityState={
      {
        "checked": true,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-minLength"
  >
    <View
      testID="icon-check"
    />
    <Text
      className="text-xs text-success"
      variant="caption"
    >
      setup.rules.minLength
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.uppercase: common:met"
    accessibilityState={
      {
        "checked": true,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-uppercase"
  >
    <View
      testID="icon-check"
    />
    <Text
      className="text-xs text-success"
      variant="caption"
    >
      setup.rules.uppercase
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.lowercase: common:met"
    accessibilityState={
      {
        "checked": true,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-lowercase"
  >
    <View
      testID="icon-check"
    />
    <Text
      className="text-xs text-success"
      variant="caption"
    >
      setup.rules.lowercase
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.number: common:met"
    accessibilityState={
      {
        "checked": true,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-number"
  >
    <View
      testID="icon-check"
    />
    <Text
      className="text-xs text-success"
      variant="caption"
    >
      setup.rules.number
    </Text>
  </View>
  <View
    accessibilityLabel="setup.rules.special: common:met"
    accessibilityState={
      {
        "checked": true,
      }
    }
    className="flex-row items-center gap-1"
    testID="password-rule-special"
  >
    <View
      testID="icon-check"
    />
    <Text
      className="text-xs text-success"
      variant="caption"
    >
      setup.rules.special
    </Text>
  </View>
</View>
`;
